--- a/src/main/resources/fxml/partidaView.fxml
+++ b/src/main/resources/fxml/partidaView.fxml
@@ -62,6 +62,11 @@
                 <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
             </GridPane.margin>
         </ImageView>
-      <Button fx:id="newGameButton" alignment="CENTER" mnemonicParsing="false" onAction="#onNewGameAction" text="Nueva Partida" visible="false" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
+      <Button alignment="CENTER" mnemonicParsing="false" onAction="#onNewGameAction" text="Nueva Partida" visible="false" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
+      <Label fx:id="fakeToadsLabel" alignment="BOTTOM_CENTER" contentDisplay="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="BOTTOM">
+         <GridPane.margin>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </GridPane.margin>
+      </Label>
     </children>
 </GridPane>
